Refactored home component so it is consistent with standards

--- a/src/app/components/my-jobs-item/my-jobs-item.component.html
+++ b/src/app/components/my-jobs-item/my-jobs-item.component.html
@@ -9,7 +9,7 @@
     <section>
       <p *ngIf="section == 'current'">{{job.street}}</p>
       <p *ngIf="section == 'current'">
-        <span *ngIf="!job.jobUsers[0].accepted && !job.jobUsers[0].willPerform">{{'user.apply.confirmation' | translate}}</span>
+        <span *ngIf="!job.jobUsers[0].accepted && !job.jobUsers[0].willPerform">{{'confirmation.applied.for.job.title' | translate}}</span>
         <span *ngIf="job.jobUsers[0].accepted && !job.jobUsers[0].willPerform">{{'assignment.status.user_company_hire' | translate}}</span>
         <span *ngIf="job.jobUsers[0].willPerform && !job.jobUsers[0].performed">{{'assignment.status.you_hired' | translate}}</span>
         <span *ngIf="job.jobUsers[0].performed">{{'assignment.status.performed' | translate}}</span>
