--- a/src/app/views/home/home.component.html
+++ b/src/app/views/home/home.component.html
@@ -135,8 +135,8 @@
 
 
   <div class="home-partners-container">
-    <h2 class="home-partners-title">{{'start.partner_section.title' | translate}}</h2>
-    <p>{{'start.partner_section.text' | translate}}</p>
+    <h2 class="home-partners-title">{{'home.partners.title' | translate}}</h2>
+    <p>{{'home.partners.description' | translate}}</p>
     <div class="home-partners-logos-container">
       <div class="home-logo-container">
         <a href="http://antrop.se/"><img class="home-partner-logo" src="/assets/images/antrop-logo2.png" alt="Antrop"></a>
