--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -140,8 +140,8 @@
           <span>{{'applications.title' | translate}}</span>
         </p>
         <p>
-          <span>Jakobsbergsgatan 22,</span>
-          <span>111 44 Stockholm</span>
+          <span>Birger Jarlsgatan 57C,</span>
+          <span>113 56 Stockholm</span>
         </p>
         <p><a href="mailto:hej@justarrived.se"><span>hej@justarrived.se</span></a></p>
       </div>
