Added i18n translation capabilities to the autocomplete dropdown and used it for profieciency levels

--- a/src/app/views/user/user-settings/user-profile/user-profile.component.html
+++ b/src/app/views/user/user-settings/user-profile/user-profile.component.html
@@ -184,7 +184,7 @@
                 </div>
               </div>
               <div class="profile-input-table-row-inner-dropdown-container">
-                <autocomplete-dropdown [lookupType]="'list'" [enumList]="languageProficiencyLevelsAvailable" [(destination)]="userLanguage.proficiency" [placeholder]="'user.profile.form.language.proficiency.placeholder' | translate" [autocompleteResultLabelFunction]="namePropertyLabel"
+                <autocomplete-dropdown [lookupType]="'list'" [enumList]="languageProficiencyLevelsAvailable" [translateLabel]="true" [(destination)]="userLanguage.proficiency" [placeholder]="'user.profile.form.language.proficiency.placeholder' | translate" [autocompleteResultLabelFunction]="namePropertyLabel"
                     [selectedItemLabelFunction]="namePropertyLabel">
                 </autocomplete-dropdown>
               </div>
@@ -211,7 +211,7 @@
                 </div>
               </div>
               <div class="profile-input-table-row-inner-dropdown-container">
-                <autocomplete-dropdown [lookupType]="'list'" [enumList]="skillProficiencyLevelsAvailable" [(destination)]="userSkill.proficiency" [placeholder]="'user.profile.form.skill.proficiency.placeholder' | translate" [autocompleteResultLabelFunction]="namePropertyLabel" [selectedItemLabelFunction]="namePropertyLabel">
+                <autocomplete-dropdown [lookupType]="'list'" [enumList]="skillProficiencyLevelsAvailable" [translateLabel]="true" [(destination)]="userSkill.proficiency" [placeholder]="'user.profile.form.skill.proficiency.placeholder' | translate" [autocompleteResultLabelFunction]="namePropertyLabel" [selectedItemLabelFunction]="namePropertyLabel">
                 </autocomplete-dropdown>
               </div>
             </div>
