--- a/src/app/components/autocomplete-dropdown/autocomplete-dropdown.component.html
+++ b/src/app/components/autocomplete-dropdown/autocomplete-dropdown.component.html
@@ -16,7 +16,7 @@
   </div>
   <div class="dropdown-items-list" [hidden]="!isDropdownOpened">
     <autocomplete-dropdown-list-item *ngIf="hasAllOption" [item]="allOptionValue" [labelFunction]="allOptionLabelFunction" [ngClass]="{'selected-autocomplete-item': -1 === selectedItemIndex}" (dropdownListItemSelect)="onDropdownListItemSelect($event)"></autocomplete-dropdown-list-item>
-    <autocomplete-dropdown-list-item *ngFor="let item of autocompleteResults; let index = index" [item]="item" [labelFunction]="autocompleteResultLabelFunction" [isGroupFunction]="isGroupFunction" [ngClass]="{'selected-autocomplete-item': index === selectedItemIndex}" (dropdownListItemSelect)="onDropdownListItemSelect($event)"></autocomplete-dropdown-list-item>
+    <autocomplete-dropdown-list-item *ngFor="let item of autocompleteResults; let index = index" [translateLabel]="translateLabel" [item]="item" [labelFunction]="autocompleteResultLabelFunction" [isGroupFunction]="isGroupFunction" [ngClass]="{'selected-autocomplete-item': index === selectedItemIndex}" (dropdownListItemSelect)="onDropdownListItemSelect($event)"></autocomplete-dropdown-list-item>
 
     <div *ngIf="!autocompleteResults.length" class="autocomplete-dropdown-list-item">
       No items to display
